codegen/tests/fail/delegate/external_type_without_conversion.stderr
error[E0432]: unresolved import `delegation::__macros`
 --> tests/fail/delegate/external_type_without_conversion.rs:1:18
  |
1 | use delegation::{__macros::Either, delegate};
  |                  ^^^^^^^^ could not find `__macros` in `delegation`
